objects/Rateio_do_Contrato__c.object
<CustomObject>
    <description>Onda 02 Projeto - Objeto para controlar Rateios / Verbas / ROI (Contratos, Eventos, Ações Promocionais, Treinamentos) e Utilizado para Calculo do ROI</description>
    <fields>
        <fullName>Agrupamento_ME__c</fullName>
        <formula>&apos;&apos;/*Produto__r.Agrupamento_ME__c*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agrupamento ME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custo_Pernod__c</fullName>
        <formula>Perc_de_Rateio__c *  LAT_Contract__r.Custo_Pernod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custo PRB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Contrato</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Rateios do Contrato</relationshipLabel>
        <relationshipName>Rateios_do_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perc_de_Rateio__c</fullName>
        <label>% de Rateio</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Produto_TODELETE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto</label>
        <referenceTo>Informacoes_do_Produto__c</referenceTo>
        <relationshipLabel>Rateios de Produtos do Contrato</relationshipLabel>
        <relationshipName>Rateios_do_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto__c</fullName>
        <label>Produto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rateio padrão</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Jim Beam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Contrato__c</fullName>
        <formula>Perc_de_Rateio__c *  LAT_Contract__r.ROI_Investimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rateio do Contrato</label>
    <nameField>
        <displayFormat>Rateio-{000000}</displayFormat>
        <label>Número do Rateio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rateios do Contrato</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>